# llm

./: .coveragerc  .editorconfig  .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.py  docker-compose.yml  generate.py  main.py  pyproject.toml  requirements.txt  search_hyperparameters.py  setup.py  train.bat  train.py  train_from_scratch.py
configs/: advanced.yml  default.yaml  hyperparameter_search.yaml  small.yml  train_config.json
hypernetwork/: hypernet.py
model/: distillation.py  hyperparameter_search.py  optimizations.py  quantization.py  student_model.py  transformer.py
pruning_quant/: pruning.py  quantization.py
rag_memory/: build_index.py  memory_bank.py
student/: DistillationLoss.py  distill.py  model_student.py
tests/: test_dataset.py  test_distillation.py  test_generation.py  test_hyperparameter_search.py  test_model.py  test_optimizations.py  test_quantization.py  test_search_hyperparameters.py  test_student.py  test_student_model.py  test_tokenizer.py  test_trainer.py
tokenizer/: bpe_pq_tokenizer.py  simple_tokenizer.py
trainer/: train_advanced.py  train_loop.py  trainer.py
utils/: helpers.py  logger.py
